--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -10,16 +10,16 @@
     <!-- <link rel="shortcut icon" href="/img/favicon-96x96.png"> -->
     <title>Qrfd | Queryfeed URL Shortener</title>
 
-    <!-- <link rel="stylesheet" type="text/css" href="/assets/lib/material-design-icons/css/material-design-iconic-font.min.css"/> -->
+    <link rel="stylesheet" type="text/css" href="/assets/lib/material-design-icons/css/material-design-iconic-font.min.css"/>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!-- <link rel="stylesheet" type="text/css" href="/assets/lib/jquery.gritter/css/jquery.gritter.css"/> -->
-    <!-- <link rel="stylesheet" href="/assets/css/app.min.css" type="text/css"/> -->
+    <link rel="stylesheet" type="text/css" href="/assets/lib/jquery.gritter/css/jquery.gritter.css"/>
+    <link rel="stylesheet" href="/assets/css/app.min.css" type="text/css"/>
 
-    <!-- <style>{% include "style.css" %}</style> -->
+    <style>{% include "style.css" %}</style>
 
   </head>
   <body>
@@ -56,6 +56,11 @@
       </div>
 
     </div>
+
+
+    <script src="assets/lib/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="assets/lib/perfect-scrollbar/js/perfect-scrollbar.jquery.min.js" type="text/javascript"></script>
+    <script src="assets/lib/bootstrap/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
     <!-- <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script> -->
     <!-- <script src="/webjars/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script> -->
