search field added

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -19,7 +19,17 @@
         <div class="container-fluid">
           <div class="be-navbar-header"><a class="navbar-brand" href="index.html"></a>
           </div>
-          <div class="be-right-navbar">
+          <div class="be-right-navbar be-right-navbar-flex">
+
+            <div class="page-title"><span>Blank Page</span></div>
+
+            <div class="search-container" id="app-search-container">
+              <div class="input-group input-group-sm">
+                <input class="form-control search-input" type="text" name="search" placeholder="Search..."><span class="input-group-btn">
+                  <button class="btn btn-primary" type="button">Search</button></span>
+              </div>
+            </div>
+
             <ul class="nav navbar-nav float-right be-user-nav">
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false"><img src="assets/img/avatar.png" alt="Avatar"><span class="user-name">Túpac Amaru</span></a>
                 <div class="dropdown-menu" role="menu">
@@ -30,7 +40,7 @@
                 </div>
               </li>
             </ul>
-            <div class="page-title"><span>Blank Page</span></div>
+
             <ul class="nav navbar-nav float-right be-icons-nav">
               <li class="nav-item dropdown"><a class="nav-link be-toggle-right-sidebar" href="#" role="button" aria-expanded="false"><span class="icon mdi mdi-settings"></span></a></li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-expanded="false"><span class="icon mdi mdi-notifications"></span><span class="indicator"></span></a>
