--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -7,28 +7,89 @@ body {
     color: darkslategray;
 }
 
+h1, h2, h3, h4 {
+    line-height: initial;
+}
 
 #container {
 
 }
 
-#content {
+.user-block {
+    display: flex;
+    flex-direction: row;
+}
 
+#content {
     min-width: 600px;
-    margin-left: 300px; /* Same as the width of the sidebar */
+    margin-left: 315px;
     padding: 0px 0px;
+
+}
+
+.feed-controls {
+    margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+}
+
+.user-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#search-field {
+    padding-left: 10px;
+    height: 30px;
+    font-size: 10pt;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+}
+
+#search-button {
+    height: 35px;
+    font-size: 10pt;
+    border: none;
+    background-color: whitesmoke;
+    margin: 0;
+
+}
+
+.read-more {
+    text-align: center;
+}
+
+.search-block {
+
+}
+
+.flex-separator {
+    flex-grow: 10;
+}
+
+#user-header {
+    padding: 25px 0 25px 0;
+    border-bottom: 1px solid lightgray;
+}
+
+.feed-control {
+    margin-right: 25px;
 
 }
 
 .center {
     margin: auto;
-    width: 500px;
-    border: 3px solid green;
     padding: 10px;
 }
 
 #sidebar-content {
-    margin: 20px;
+    /* margin: 50px 20px 20px 20px; */
 }
 
 #sidebar {
@@ -43,30 +104,30 @@ body {
 }
 
 
-
-.sidebar-section:hover {
-    cursor: pointer;
-}
-
 .sidebar-section {
     display: flex;
     flex-direction: row;
-
 }
 
-.fav-img {
-    display: block;
-    margin-right: 5px;
+.sidebar-feed:hover {
+    background-color: #e7e7e7;
+    cursor: pointer;
+}
 
+.sidebar-feed {
+    min-height: 30px;
+    padding: 0 20px 0 35px;
+    align-items: center;
+}
+
+.sidebar-tag {
+    margin: 25px 0 7px;
+    font-weight: bold;
+    padding: 0 20px 0 20px;
 }
 
 .feed-image {
-    margin-right: 5px;
-}
-
-
-.feed-title {
-    flex-grow: 999;
+    margin: 0px 7px;
 }
 
 .feed-count {
@@ -77,10 +138,16 @@ body {
     padding: 4px;
 }
 
-.no-verflow {
+.overflow-cut {
     overflow-x: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.overflow-split {
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
 }
 
 .feed-items {
@@ -90,15 +157,13 @@ body {
 }
 
 #content-align {
-
     margin: auto;
     width: 800px;
-
+    padding-bottom: 50px;
 }
 
 .entry {
-
-    padding: 50px;
+    padding: 10px 35px 35px 35px;
     border: 1px solid whitesmoke;
     margin: 0 0 35px 0;
 
@@ -124,4 +189,60 @@ body {
     margin-right: 10px;
     text-decoration-style: none;
     /* text-decoration-style: dashed; */
+}
+
+#feed-header {
+    margin: 30px 0 30px 0;
+
+}
+
+
+/* ------------- */
+
+/* Dropdown Button */
+.dropbtn {
+    /* background-color: #4CAF50; */
+    /* color: white; */
+    /* padding: 16px; */
+    /* font-size: 16px; */
+    /* border: none; */
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: whitesmoke;
+    min-width: 160px;
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    /* color: black; */
+    padding: 12px 16px;
+    /* text-decoration: none; */
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+/* .dropdown-content a:hover { */
+/*     background-color: #whitesmoke; */
+/* } */
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    /* background-color: #3e8e41; */
 }
