--- a/profiles/dev/resources/templates/dev/main-header.html
+++ b/profiles/dev/resources/templates/dev/main-header.html
@@ -17,21 +17,10 @@
         <div class="menu-item flex-separator">
         </div>
 
-        <div class="menu-item search-block">
-            <input id="search-field" type="text" placeholder="Unput a URL here">
-            <button class="btn-submit" type="Button">Search</button>
-        </div>
+        {% include "dev/block-search.html"%}
 
-        <div class="menu-item user-block last">
-            <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png">
-            <div class="dropdown menu-item last">
-                <a href="#" class="dropbtn">Ivan Grishaev &#9662;</a>
-                <div class="dropdown-content">
-                    <a href="#">Profile</a>
-                    <a href="#">Logout</a>
-                </div>
-            </div>
-        </div>
+        {% include "dev/block-user.html"%}
+
 
     </div>
 
