--- a/profiles/dev/resources/templates/dev/sidebar.html
+++ b/profiles/dev/resources/templates/dev/sidebar.html
@@ -3,10 +3,10 @@
 
         <h1>Project</h1>
 
-        {% include "dev/sidebar-feed-folder.html" %}
-        {% include "dev/sidebar-feed-folder.html" %}
-        {% include "dev/sidebar-feed-folder.html" %}
-        {% include "dev/sidebar-feed-folder.html" %}
+        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
 
     </div>
 </div>
