--- a/profiles/dev/resources/templates/dev/sidebar.html
+++ b/profiles/dev/resources/templates/dev/sidebar.html
@@ -1,12 +1,13 @@
 <div id="sidebar">
     <div id="sidebar-content">
-
         <h1>Project</h1>
+        <div id="sidebar-ui">
 
-        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
-        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
-        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
-        <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+            <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+            <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+            <!-- {% include "dev/sidebar-feed-folder.html" %} -->
+            <!-- {% include "dev/sidebar-feed-folder.html" %} -->
 
+        </div>
     </div>
 </div>
