--- a/profiles/dev/resources/templates/dev/test.html
+++ b/profiles/dev/resources/templates/dev/test.html
@@ -16,7 +16,7 @@
                 <div id="content-align">
                     {% include "dev/main-header.html" %}
                     <div id="page">
-                        {% include "dev/auth-form.html" %}
+                        {# {% include "dev/auth-form.html" %} #}
                         {# {% include "dev/search-results.html" %} #}
                         {# {% include "dev/feed-header.html" %} #}
                         {# {% include "dev/feed-list.html" %} #}
@@ -26,5 +26,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="/ui/main.js"></script>
+
     </body>
 </html>
