--- a/profiles/dev/resources/templates/dev/block-search.html
+++ b/profiles/dev/resources/templates/dev/block-search.html
@@ -1,4 +1,6 @@
-<div class="menu-item search-block">
-    <input id="search-field" type="text" placeholder="Unput a URL here">
-    <button class="btn-submit" type="Button">Search</button>
+<div id="search-block" class="menu-item">
+    {# <form> #}
+    {#     <input id="search-field" type="text" placeholder="Unput a URL here"> #}
+    {#     <button class="btn-submit" type="Button">Search</button> #}
+    {# </form> #}
 </div>
