--- a/profiles/dev/resources/templates/dev/style.css
+++ b/profiles/dev/resources/templates/dev/style.css
@@ -192,6 +192,7 @@ h1, h2, h3, h4 {
 
 .feed-image {
     margin: 0px 7px;
+    padding-top: 5px;
 }
 
 .feed-count {
@@ -333,6 +334,11 @@ input {
 
 a {
     color: darkslategray;
+}
+
+.feed-title {
+    font-size: 9pt;
+    padding-right: 10px;
 }
 
 .feed-title a {
