--- a/profiles/dev/resources/templates/dev/style.css
+++ b/profiles/dev/resources/templates/dev/style.css
@@ -212,9 +212,7 @@ h1, h2, h3, h4 {
 }
 
 .overflow-split {
-    overflow-x: hidden;
-    text-overflow: ellipsis;
-    white-space: normal;
+    overflow-wrap: break-word;
 }
 
 .feed-items {
