--- a/resources/templates/dev/index.html
+++ b/resources/templates/dev/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="container">
-            {# {% include "dev/error-bar.html" %} #}
+            {% include "dev/error-bar.html" %}
             {% include "dev/sidebar.html" %}
             <div id="content">
                 <div id="content-align">
