--- a/resources/templates/dev/style.css
+++ b/resources/templates/dev/style.css
@@ -310,21 +310,32 @@ h1, h2, h3, h4 {
     /* background-color: #3e8e41; */
 }
 
-.error-bar {
+.bar {
     z-index: 10;
     position: fixed;
     padding-left: 345px;
     bottom: 0;
     width: 100%;
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: black;
+    border: 1px solid lightgray;
 }
 
-.error-close {
+.bar-error {
+    background-color: red;
+    color: white;
+    border: none;
+}
+
+.bar-close {
     cursor: pointer;
-    border: 1px solid white;
+    border: 1px solid black;
     padding: 3px 7px;
-    margin-right: 7px;
+    margin-right: 10px;
+}
+
+.bar-error .bar-close {
+    border: 1px solid white;
 }
 
 input {
