--- a/resources/templates/dev/block-user.html
+++ b/resources/templates/dev/block-user.html
@@ -1,10 +1,10 @@
-<div class="menu-item user-block last">
-    <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png">
-    <div class="dropdown menu-item last">
-        <a href="#" class="dropbtn">Ivan Grishaev &#9662;</a>
-        <div class="dropdown-content">
-            <a href="#">Profile</a>
-            <a href="#">Logout</a>
-        </div>
-    </div>
+<div id="user-block" class="menu-item last">
+    {# <div class="dropdown menu-item last"> #}
+    {#     <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png"> #}
+    {#     <div class="dropdown-content"> #}
+    {#         <span class="header">Ivan Grishaev</span> #}
+    {#         <a href="#">Profile</a> #}
+    {#         <a href="#">Logout</a> #}
+    {#     </div> #}
+    {# </div> #}
 </div>
