--- a/resources/templates/dev/main-header.html
+++ b/resources/templates/dev/main-header.html
@@ -19,7 +19,7 @@
 
         {% include "dev/block-search.html"%}
 
-        {# {% include "dev/block-user.html"%} #}
+        {% include "dev/block-user.html"%}
 
     </div>
 
