--- a/resources/templates/dev/block-user.html
+++ b/resources/templates/dev/block-user.html
@@ -2,7 +2,11 @@
     {# <div class="dropdown menu-item last"> #}
     {#     <img class="avatar" src="https://www.w3schools.com/howto/img_avatar.png"> #}
     {#     <div class="dropdown-content"> #}
-    {#         <span class="header">Ivan Grishaev</span> #}
+    {#         <span class="header"> #}
+    {#             Ivan Grishaev #}
+    {#             <br> #}
+    {#             <span>Signed via Google</span> #}
+    {#         </span> #}
     {#         <a href="#">Profile</a> #}
     {#         <a href="#">Logout</a> #}
     {#     </div> #}
