--- a/resources/templates/dev/style.css
+++ b/resources/templates/dev/style.css
@@ -226,6 +226,10 @@ h1, h2, h3, h4 {
     padding-bottom: 50px;
 }
 
+
+/* Entry */
+
+
 .entry {
     padding: 10px 35px 35px 35px;
     border: 1px solid whitesmoke;
@@ -234,12 +238,18 @@ h1, h2, h3, h4 {
 
 }
 
+.entry.is_read,
+.entry.is_read a
+{
+    color: gray;
+}
+
 .entry-content {
     margin: 0px 0px 20px 0px;
 
 }
 
-.entry-content img{
+.entry-content img {
     max-width: 100%;
 
 }
@@ -254,6 +264,7 @@ h1, h2, h3, h4 {
     text-decoration-style: none;
     /* text-decoration-style: dashed; */
 }
+
 
 #feed-header {
     margin: 30px 0 30px 0;
