--- a/resources/templates/dev/style.css
+++ b/resources/templates/dev/style.css
@@ -98,6 +98,11 @@ h1, h2, h3, h4 {
     flex-direction: row;
 }
 
+.controls {
+    font-size: 9pt;
+    margin-top: -9px;
+}
+
 .user-menu {
     display: flex;
     flex-direction: row;
@@ -229,6 +234,9 @@ h1, h2, h3, h4 {
 
 /* Entry */
 
+.subinfo {
+    margin-top: -8px;
+}
 
 .entry {
     padding: 10px 35px 35px 35px;
@@ -272,35 +280,26 @@ h1, h2, h3, h4 {
 }
 
 
-/* ------------- */
+/* Dropdown */
 
-/* Dropdown Button */
-.dropbtn {
-    /* background-color: #4CAF50; */
-    /* color: white; */
-    /* padding: 16px; */
-    /* font-size: 16px; */
-    /* border: none; */
-}
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: whitesmoke;
     min-width: 160px;
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    box-shadow: 4px 4px 0px -2px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
-/* Links inside the dropdown */
-.dropdown-content a,span {
+.dropdown-content a,
+.dropdown-content span.header
+ {
     padding: 12px 16px;
     display: block;
 }
@@ -313,15 +312,13 @@ h1, h2, h3, h4 {
     background-color: #e7e7e7;
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    /* background-color: #3e8e41; */
-}
+
+/* Notification bar */
+
 
 .bar {
     z-index: 10;
