--- a/resources/templates/dev/style.css
+++ b/resources/templates/dev/style.css
@@ -259,7 +259,11 @@ h1, h2, h3, h4 {
 
 .entry-content img {
     max-width: 100%;
+}
 
+.entry-content iframe {
+    width: 640px;
+    height: 480px;
 }
 
 .entry-actions {
