--- a/ansible/playbooks/templates/nginx.conf.jinja2
+++ b/ansible/playbooks/templates/nginx.conf.jinja2
@@ -12,8 +12,8 @@ server {
     listen 443 ssl;
     server_name {{ inventory_hostname }} {{ domain }} www.{{ domain }};
 
-    ssl_certificate /etc/letsencrypt/live/{{ service_name }}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/{{ service_name }}/privkey.pem;
+    # ssl_certificate /etc/letsencrypt/live/{{ service_name }}/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/{{ service_name }}/privkey.pem;
 
     charset utf-8;
     client_max_body_size 2M;
