--- a/ansible/playbooks/templates/nginx.conf.jinja2
+++ b/ansible/playbooks/templates/nginx.conf.jinja2
@@ -1,4 +1,3 @@
-
 upstream backend {
 
 {% for host in groups["node"] %}
@@ -8,12 +7,11 @@ upstream backend {
 }
 
 server {
-    listen 80;
     listen 443 ssl;
     server_name {{ inventory_hostname }} {{ domain }} www.{{ domain }};
 
-    # ssl_certificate /etc/letsencrypt/live/{{ service_name }}/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/{{ service_name }}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/{{ service_name }}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/{{ service_name }}/privkey.pem;
 
     charset utf-8;
     client_max_body_size 2M;
@@ -28,5 +26,23 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
+
+}
+
+
+server {
+
+    if ($host = www.{{ domain }}) {
+        return 301 https://$host$request_uri;
+    }
+
+
+    if ($host = {{ domain }}) {
+        return 301 https://$host$request_uri;
+    }
+
+    listen 80;
+    server_name {{ inventory_hostname }} {{ domain }} www.{{ domain }};
+    return 404;
 
 }
