--- a/resources/templates/dev/style.css
+++ b/resources/templates/dev/style.css
@@ -275,7 +275,9 @@ h1, h2, h3, h4 {
 }
 
 .entry-content iframe {
-    width: 640px;
+    border: none;
+    margin-bottom: 25px;
+    width: 100%;
     height: 480px;
 }
 
